--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
             <span class="badge">✅ CI/CD Deployed</span>
         </div>
         
-        <h1>🧮 Calculator</h1>
+        <h1>🧮 Min Awesome Calculator</h1>
         <p class="subtitle">Demonstrerer automatisk CI/CD deployment</p>
         
         <div class="input-group">
